bad/assign_arr_elem_class_string.example_compiler_output
ERROR
[1mbad/assign_arr_elem_class_string.lat:6:16: [1;31merror: [0;1massigning to `Y` from incompatible type `string`[m
	(new Y[3])[1] = "";
	              [1;32m^[m
